[tool.poetry]
name = "eintf"
version = "0.1.0"
description = ""
authors = ["kshib <ksyko@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
schedule = "^1.1.0"
pymongo = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
